# git.polytest

./: .gitignore  CellularAutomaton.pas  README.md  back_to_school.pas  brette.cpp  brette.h  consolgragik.cpp  consolgragik.h  distribution.m  distribution_4_timuuus.m  kr1.cpp  kr3.cpp  kr4.cpp  main.cpp  many.cpp  many.h  parasha.cpp  q.cpp  spielfeld.cpp  spielfeld.h  test1.cpp  test4.1.cpp  test4.cpp  test5.cpp  test6.1.cpp  test6.2.cpp  test6.cpp  tetris.cpp  tetrisfigur.cpp  tetrisfiguren.cpp  unconditional_optimization.m  Шаблон.pages  реферат по обж волкова.pages  реферат по обж ерниязов.pages
1-4 курс/: Bresenham's_line_algorithm.cpp  test.swift
Computational_Mathematics/: 3.cpp  3_float.cpp
arithmetic/: 10->2  10->2.cpp  BCD.cpp  BCD_Timuus.cpp  IEEE754.cpp  X->2.cpp  bezier.cpp  timuus.cpp
bachelor/: abstract.tex  analysis.tex  bachelor_thesis.aux  bachelor_thesis.bbl  bachelor_thesis.out  bachelor_thesis.tex  bachelor_thesis.toc  conclusion.tex  disser.cls  glossary.tex  introduction.tex  settings.tex  task.tex  testing.tex  title.tex
boyarkin/1/networks/networks/server/: CMakeLists.txt
boyarkin/1/networks/networks/server/headers/: Command.h
boyarkin/1/networks/networks/server/sources/: ClientCommand.cpp  Command.cpp
jackson_network/: pp.m  practic.m  practic_2.m  practic_3.m  test.m  test_2.m  untitled4.m  отчет.pages
programm/: test5.cpp  test6.many.cpp
template/: Iset.h
бояркин 1/networks/networks/client/: CMakeLists.txt
бояркин 1/networks/networks/client/headers/: Client.h
бояркин 1/networks/networks/client/sources/: Client.cpp
(+1303 files in other folders)
